--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <header>
-    <center><h1 style ="color: white">Evan Anderson's Home sitting service</h1></center>
+    <center style="font-family: sans-serif"><h1 style ="color: white">Evan Anderson's Home/Pet sitting service</h1></center>
     <title>Evan Anderson's Home sitting: Main</title>
     <style>
         body {
@@ -18,11 +18,13 @@
 <body>
 
 <center>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <a href = "About.html">
+        <button>About me.</button></a>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="JDNGMBRJRQQ6L">
 <table>
-<tr><td><input type="hidden" name="on0" value="Amount of time">Amount of time</td></tr><tr><td><select name="os0">
+<tr><td><input type="hidden" name="on0" value="Amount of time" style="font-family: sans-serif">Amount of time</td></tr><tr><td><select name="os0">
 	<option value="For 3 hours or less">For 3 hours or less $20.00 USD</option>
 	<option value="For 5 hours or more">For 5 hours or more $60.00 USD</option>
 	<option value="For multiple days (Each day)">For multiple days (Each day) $100.00 USD</option>
@@ -32,10 +34,10 @@
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 </center>
 
-    <a href = "About.html">
-        <button>About me.</button></a>
+
     </body>
 
 
